@@ -7,6 +7,7 @@ Fixed bug 1020: Parsing Error
 Fixed bug 1026: PMD doesn't handle 'value =' in SuppressWarnings annotation
 Fixed bug 1028: False-positive: Compare objects with equals for Enums
 Fixed bug 1037: Facing a showstopper issue in PMD Report Class (report listeners)
+Fixed bug 1039: pmd-nicerhtml.xsl is packaged in wrong location
 Fixed bug 1043: node.getEndLine() always returns 0 (ECMAscript)
 Fixed bug 1044: Unknown option: -excludemarker
 Fixed bug 1047: False Positive in 'for' loops for LocalVariableCouldBeFinal in 5.0.1
